fix(styles): prevent actions spacing overwrite in Illustrated Messages [ci visual] (#3894)

--- a/src/styles/illustrated-message.scss
+++ b/src/styles/illustrated-message.scss
@@ -66,7 +66,7 @@ $block: fd-illustrated-message;
     width: 100%;
 
     * {
-      margin: 0 0.25rem;
+      margin: 0 0.25rem !important;
     }
   }
 
